crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__assistant_code_fence.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Agent                                                                         # [-]=   [fg=#37f499 b]=│  [fg=#37f499 b]=Agent [-]=                                                                      [-]=  
│   │ Here is the code:                                                             # [-]=   [fg=#37f499 b]=│  [fg=#ebfafa]=Here is the code: [-]=                                                          [-]=  
│                                                                                   # [-]=                                                                                
│   │    │ fn main() {                                                              # [-]=   [fg=#37f499 b]=│  [fg=#3b4261]=   │  [fg=#b48ead]=fn [fg=#c0c5ce]=  [fg=#8fa1b3]=main [fg=#c0c5ce]=() { [-]=                                                           [-]=  
│   │    │     println!("hello");                                                   # [-]=   [fg=#37f499 b]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=    println!(" [fg=#a3be8c]=hello [fg=#c0c5ce]="); [-]=                                                [-]=  
│   │    │ }                                                                        # [-]=   [fg=#37f499 b]=│  [fg=#3b4261]=   │  [fg=#c0c5ce]=} [-]=                                                                     [-]=
