crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__assistant_text.snap
---
source: src/cli/renderer/region/tests.rs
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   │ Agent                                                                         # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=│  [fg=#37f499 bg=#171928 b]=Agent [bg=#171928]=                                                                      [bg=#171928]=  
│   │ Sure! I can help with that. Let me take a look.                               # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=│  [fg=#ebfafa bg=#171928]=Sure! I can help with that. Let me take a look. [bg=#171928]=                            [bg=#171928]=
