crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__json_output.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Activity                                                                      # [-]=   [fg=#f1fc79]=│  [fg=#f1fc79 b]=Activity [-]=                                                                   [-]=  
│   │ ✓ read_file_range  path: config.json  ▸                                       # [-]=   [fg=#f1fc79]=│  [fg=#37f499]=✓  [fg=#ebfafa b]=read_file_range [-]=   [fg=#abb4da]=path: config.json [fg=#3b4261]=  ▸ [-]=                                    [-]=
