crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__narrow_live_frame.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                           # [-]=                                        
│   thndrs / ready                          # [-]=   [fg=#37f499 b]=thndrs [fg=#6473b7 b]= / ready [-]=                       [-]=  
│   Ask for change, run a command, or       # [-]=   [fg=#abb4da]=Ask for change, run a command, or [-]=    [-]=  
│   inspect the repo.                       # [-]=   [fg=#abb4da]=inspect the repo. [-]=                    [-]=  
│                                           # [-]=                                        
│   │   · No project instructions   —       # [-]=   [fg=#3b4261]=│    [fg=#abb4da]=·  [fg=#abb4da]=No project instructions [fg=#abb4da]=    [fg=#6473b7]=— [-]=    [-]=  
│   │   · No skills available  skills       # [-]=   [fg=#3b4261]=│    [fg=#abb4da]=·  [fg=#abb4da]=No skills available [fg=#abb4da]=   [fg=#6473b7]=skills [-]=    [-]=  
│   │   ✓ Web Search           native       # [-]=   [fg=#3b4261]=│    [fg=#37f499]=✓  [fg=#abb4da]=Web Search [fg=#abb4da]=            [fg=#6473b7]=native [-]=    [-]=  
│                                           # [-]=                                        
│   ? help   /model switch   /search        # [-]=   [fg=#f1fc79 b]=? [fg=#abb4da]= help    [fg=#f1fc79 b]=/model [fg=#abb4da]= switch    [fg=#f1fc79 b]=/search [fg=#abb4da]=  [-]=    [-]=  
│   configure                               # [-]=   [fg=#abb4da]=configure [-]=                            [-]=  
│                                           # [-]=                                        
│                                           # [-]=                                        
│                                           # [bg=#171928]=                                        
│   ╭─ test-session ───────────────────╮    # [bg=#171928]=   [fg=#f1fc79 bg=#171928]=╭─ [fg=#f1fc79 bg=#171928 b]= test-session  [fg=#f1fc79 bg=#171928]=─────────────────── [fg=#f1fc79 bg=#171928]=╮ [bg=#171928]=  
│   │ ❯  a longer prompt that should w │    # [bg=#171928]=   [fg=#f1fc79 bg=#171928]=│ [bg=#171928]=  [fg=#f1fc79 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=a longer prompt that should w [bg=#171928]=  [fg=#f1fc79 bg=#171928]=│ [bg=#171928]=  
│   │    rap at narrow width           │    # [bg=#171928]=   [fg=#f1fc79 bg=#171928]=│ [bg=#171928]=     [fg=#ebfafa bg=#171928]=rap at narrow width [bg=#171928]=            [fg=#f1fc79 bg=#171928]=│ [bg=#171928]=  
│   ╰──────────────────────────────────╯    # [bg=#171928]=   [fg=#f1fc79 bg=#171928]=╰──────────────────────────────────╯ [bg=#171928]=  
│     model: test-model                     # [bg=#171928]=   [bg=#171928]=   [fg=#abb4da bg=#171928]=model: test-model [bg=#171928]=                  [bg=#171928]=  
│                                           # [bg=#171928]=
