crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__narrow_startup_banner.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                           # [bg=#171928]=                                        
│   thndrs  v0.1.0                          # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=thndrs [fg=#3b4261 bg=#171928]=  v0.1.0 [bg=#171928]=                       [bg=#171928]=  
│   ─────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   model   test-model · umans              # [bg=#171928]=   [fg=#a48cf2 bg=#171928]=model   [fg=#abb4da bg=#171928]=  [fg=#ebfafa bg=#171928]=test-model · umans [bg=#171928]=           [bg=#171928]=  
│   cwd     ~/Pr/St/O/thndrs                # [bg=#171928]=   [fg=#a48cf2 bg=#171928]=cwd     [fg=#abb4da bg=#171928]=  [fg=#ebfafa bg=#171928]=~/Pr/St/O/thndrs [bg=#171928]=             [bg=#171928]=  
│   search  native                          # [bg=#171928]=   [fg=#a48cf2 bg=#171928]=search  [fg=#abb4da bg=#171928]=  [fg=#ebfafa bg=#171928]=native [bg=#171928]=                       [bg=#171928]=  
│   ─────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   CONTEXT                                 # [bg=#171928]=   [fg=#04d1f9 bg=#171928 b]=CONTEXT [bg=#171928]=                              [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [fg=#ebfafa bg=#171928]=  (none) [bg=#171928]=                             [bg=#171928]=  
│   ─────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   SKILLS                                  # [bg=#171928]=   [fg=#04d1f9 bg=#171928 b]=SKILLS [bg=#171928]=                               [bg=#171928]=  
│     (none)                                # [bg=#171928]=   [fg=#abb4da bg=#171928]=  (none) [bg=#171928]=                             [bg=#171928]=  
│   ─────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   SEARCH                                  # [bg=#171928]=   [fg=#f265b5 bg=#171928 b]=SEARCH [bg=#171928]=                               [bg=#171928]=  
│     native: Umans server-side             # [bg=#171928]=   [fg=#abb4da bg=#171928]=  native: Umans server-side [bg=#171928]=          [bg=#171928]=  
│     search; DuckDuckGo HTML               # [bg=#171928]=   [fg=#abb4da bg=#171928]=  search; DuckDuckGo HTML [bg=#171928]=            [bg=#171928]=  
│     fallback via web_search tool          # [bg=#171928]=   [fg=#abb4da bg=#171928]=  fallback via web_search tool [bg=#171928]=       [bg=#171928]=  
│   ─────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   Ask for a change, run a command,        # [bg=#171928]=   [fg=#abb4da bg=#171928]=Ask for a change, run a command, [bg=#171928]=     [bg=#171928]=  
│   or inspect this repo.                   # [bg=#171928]=   [fg=#abb4da bg=#171928]=or inspect this repo. [bg=#171928]=                [bg=#171928]=  
│                                           # [bg=#171928]=                                        
│   ? help /model /search                   # [bg=#171928]=   [fg=#04d1f9 bg=#171928]=? help /model /search [bg=#171928]=                [bg=#171928]=  
│                                           # [bg=#171928]=
