crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__reasoning_block.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Thinking ✓                                                                    # [-]=   [fg=#a48cf2 b]=│  [fg=#a48cf2 b]=Thinking ✓ [-]=                                                                 [-]=  
│   │ I need to check the file structure first.                                     # [-]=   [fg=#a48cf2 b]=│  [fg=#abb4da i]=I need to check the file structure first. [-]=                                  [-]=
